fix: ensure scrollbar stays hidden; change header back to sticky

--- a/src/global.css
+++ b/src/global.css
@@ -3,7 +3,7 @@
 
 /* html {
   -ms-overflow-style: none;
-  scrollbar-width: 0;
+  scrollbar-width: none;
 }
 
 html::-webkit-scrollbar {
@@ -11,10 +11,13 @@ html::-webkit-scrollbar {
 } */
 
 html, body {
-  /* overflow-x: hidden creates issue w/ sticky header when scrolling to the bottom  */
-  overflow-x: clip;
-  max-width: 100%;
-  /* height: 100%; */
+  /* overflow-x: hidden makes header not stick to the top w/o height: 100% and overflow-y: auto*/
+  overflow-x: hidden;
+
+  /* height: 100% and overflow-y: auto helps no-scrollbar style to work */
+  height: 100%;
+  /* min-height: 100vh; */
+  overflow-y: auto;
 }
 
 body {
